parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables
Rule 2     VA -> VARS addGlobalVars
Rule 3     VA -> empty
Rule 4     FU -> FUNC FU
Rule 5     FU -> empty
Rule 6     VARS -> emptyVars VAR VARSA
Rule 7     VARSA -> TIPO COLON ID addVarLista ARREGLO VARSB
Rule 8     VARSB -> COMMA ID addVarLista ARREGLO VARSB
Rule 9     VARSB -> SEMICOLON VARSA
Rule 10    VARSB -> SEMICOLON
Rule 11    TIPO -> INT
Rule 12    TIPO -> FLOAT
Rule 13    TIPO -> CHAR
Rule 14    ARREGLO -> LSBRACKET pushParen EXP RSBRACKET popParen pushDim ARREGLO2
Rule 15    ARREGLO -> empty
Rule 16    ARREGLO2 -> LSBRACKET pushParen EXP RSBRACKET pushDim addArreglo popParen
Rule 17    ARREGLO2 -> addArreglo
Rule 18    ARREGLOCALL -> LSBRACKET pushParen EXP RSBRACKET popParen verifyDim calculateDir ARREGLOC2
Rule 19    ARREGLOCALL -> empty
Rule 20    ARREGLOC2 -> LSBRACKET pushParen EXP RSBRACKET popParen verifyDim calculateDir
Rule 21    ARREGLOC2 -> empty
Rule 22    TIPOFUNC -> INT
Rule 23    TIPOFUNC -> FLOAT
Rule 24    TIPOFUNC -> CHAR
Rule 25    TIPOFUNC -> VOID
Rule 26    FUNC -> MODULE TIPOFUNC ID addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
Rule 27    FUNCSB -> VARS addVarsFunc BLOQUE endFunc
Rule 28    FUNCSB -> addVarsFunc BLOQUE endFunc
Rule 29    PARAMS -> emptyVars PARAMSL
Rule 30    PARAMS -> empty
Rule 31    PARAMSL -> TIPO ID addVarLista
Rule 32    PARAMSL -> PARAMSL COMMA TIPO ID addVarLista
Rule 33    BLOQUE -> LBRACKET BLOQUEA
Rule 34    BLOQUE -> LBRACKET RBRACKET
Rule 35    BLOQUEA -> ESTATUTO BLOQUEA
Rule 36    BLOQUEA -> ESTATUTO RBRACKET
Rule 37    ESTATUTO -> ASIGNACION
Rule 38    ESTATUTO -> LLAMADA
Rule 39    ESTATUTO -> RETORNO
Rule 40    ESTATUTO -> LECTURA
Rule 41    ESTATUTO -> ESCRITURA
Rule 42    ESTATUTO -> DECISION
Rule 43    ESTATUTO -> REPETICION
Rule 44    ESTATUTO -> FUNCESP
Rule 45    ASIGNACION -> ID pushPilaOp ARREGLOCALL EQUALS pushEqual EXPRESION popIgual SEMICOLON
Rule 46    LLAMADA -> ID pushEra LPAREN LLAMADAS
Rule 47    LLAMADA -> ID pushEra LPAREN RPAREN SEMICOLON pushGosubLlamada
Rule 48    LLAMADAS -> EXPRESION addParam RPAREN verifyParams SEMICOLON pushGosubLlamada
Rule 49    LLAMADAS -> EXPRESION addParam COMMA LLAMADAS
Rule 50    RETORNO -> RETURN LPAREN EXPRESION RPAREN popReturn SEMICOLON
Rule 51    LECTURA -> READ LPAREN LECTURAS
Rule 52    LECTURAS -> ID pushPilaOp COMMA popRead LECTURAS
Rule 53    LECTURAS -> ID pushPilaOp RPAREN SEMICOLON popRead
Rule 54    ESCRITURA -> WRITE LPAREN ESCRITURAA
Rule 55    ESCRITURAA -> C_STRING pushConstString COMMA popWrite ESCRITURAA
Rule 56    ESCRITURAA -> C_STRING pushConstString RPAREN SEMICOLON popWrite addWriteEnd
Rule 57    ESCRITURAA -> EXPRESION COMMA popWrite ESCRITURAA
Rule 58    ESCRITURAA -> EXPRESION RPAREN SEMICOLON popWrite addWriteEnd
Rule 59    DECISION -> IF LPAREN EXPRESION RPAREN pushGotoF THEN BLOQUE SINO
Rule 60    SINO -> ELSE rellenarFalso BLOQUE rellenarSalida
Rule 61    SINO -> empty rellenarSalida
Rule 62    REPETICION -> COND
Rule 63    REPETICION -> NOCOND
Rule 64    COND -> WHILE pushSalto LPAREN EXPRESION RPAREN pushGotoF DO BLOQUE rellenarWhile
Rule 65    NOCOND -> FROM ID pushFromId EQUALS EXPRESION pushVC TO EXPRESION pushVF DO BLOQUE rellenaFrom
Rule 66    EXPRESION -> EXP popCondition
Rule 67    EXPRESION -> EXP GREATER_THAN pushCondition EXPRESION
Rule 68    EXPRESION -> EXP LESS_THAN pushCondition EXPRESION
Rule 69    EXPRESION -> EXP NOT_EQUAL pushCondition EXPRESION
Rule 70    EXPRESION -> EXP AND pushCondition EXPRESION
Rule 71    EXPRESION -> EXP OR pushCondition EXPRESION
Rule 72    EXPRESION -> EXP IS_EQUAL pushCondition EXPRESION
Rule 73    EXP -> TERMINO popPlusMinus
Rule 74    EXP -> TERMINO popPlusMinus PLUS pushPlusMinus EXP
Rule 75    EXP -> TERMINO popPlusMinus MINUS pushPlusMinus EXP
Rule 76    TERMINO -> FACTOR popMultDiv
Rule 77    TERMINO -> FACTOR popMultDiv MULTIPLY pushMultDiv TERMINO
Rule 78    TERMINO -> FACTOR popMultDiv DIVIDE pushMultDiv TERMINO
Rule 79    FACTOR -> LPAREN pushParen EXPRESION RPAREN popParen
Rule 80    FACTOR -> VARCTE
Rule 81    FACTOR -> LLAMADAMOD
Rule 82    LLAMADAMOD -> ID pushEra LPAREN pushParen LLAMADAMODS
Rule 83    LLAMADAMOD -> ID pushEra LPAREN pushParen RPAREN pushGosub
Rule 84    LLAMADAMODS -> EXPRESION addParam RPAREN popParen verifyParams pushGosub
Rule 85    LLAMADAMODS -> EXPRESION addParam COMMA LLAMADAMODS
Rule 86    VARCTE -> ID pushPilaOp ARREGLOCALL
Rule 87    VARCTE -> C_INT pushConstInt
Rule 88    VARCTE -> C_FLOAT pushConstFloat
Rule 89    VARCTE -> C_CHAR pushConstChar
Rule 90    FUNCESP -> FLINE
Rule 91    FUNCESP -> FPOINT
Rule 92    FUNCESP -> FCIRCLE
Rule 93    FUNCESP -> FARC
Rule 94    FUNCESP -> FPENUP
Rule 95    FUNCESP -> FPENDOWN
Rule 96    FUNCESP -> FCOLOR
Rule 97    FUNCESP -> FSIZE
Rule 98    FUNCESP -> FCLEAR
Rule 99    FLINE -> LINE LPAREN EXPRESION COMMA EXPRESION RPAREN popLine SEMICOLON
Rule 100   FILLCOLOR -> COMMA C_STRING pushConstString hasColor
Rule 101   FILLCOLOR -> empty
Rule 102   FPOINT -> POINT LPAREN EXPRESION FILLCOLOR RPAREN popPoint SEMICOLON
Rule 103   FCIRCLE -> CIRCLE LPAREN EXPRESION FILLCOLOR RPAREN popCircle SEMICOLON
Rule 104   FARC -> ARC LPAREN EXPRESION COMMA EXPRESION FILLCOLOR RPAREN popArc SEMICOLON
Rule 105   FPENUP -> PENUP LPAREN RPAREN popPenup SEMICOLON
Rule 106   FPENDOWN -> PENDOWN LPAREN EXPRESION COMMA EXPRESION RPAREN popPendown SEMICOLON
Rule 107   FCOLOR -> COLOR LPAREN C_STRING pushConstString RPAREN popColor SEMICOLON
Rule 108   FSIZE -> SIZE LPAREN EXPRESION COMMA EXPRESION RPAREN popSize SEMICOLON
Rule 109   FCLEAR -> CLEAR LPAREN RPAREN popClear SEMICOLON
Rule 110   empty -> <empty>
Rule 111   addProgram -> <empty>
Rule 112   emptyVars -> <empty>
Rule 113   addVarLista -> <empty>
Rule 114   addFunc -> <empty>
Rule 115   addParamsFunc -> <empty>
Rule 116   addVarsFunc -> <empty>
Rule 117   endFunc -> <empty>
Rule 118   addGlobalVars -> <empty>
Rule 119   popCondition -> <empty>
Rule 120   popIgual -> <empty>
Rule 121   popMultDiv -> <empty>
Rule 122   popPlusMinus -> <empty>
Rule 123   pushEqual -> <empty>
Rule 124   pushMultDiv -> <empty>
Rule 125   pushPlusMinus -> <empty>
Rule 126   pushCondition -> <empty>
Rule 127   pushConstInt -> <empty>
Rule 128   pushConstFloat -> <empty>
Rule 129   pushConstChar -> <empty>
Rule 130   pushConstString -> <empty>
Rule 131   pushPilaOp -> <empty>
Rule 132   pushParen -> <empty>
Rule 133   popParen -> <empty>
Rule 134   addParam -> <empty>
Rule 135   verifyParams -> <empty>
Rule 136   pushGosub -> <empty>
Rule 137   pushGosubLlamada -> <empty>
Rule 138   pushEra -> <empty>
Rule 139   popWrite -> <empty>
Rule 140   addWriteEnd -> <empty>
Rule 141   popRead -> <empty>
Rule 142   hasColor -> <empty>
Rule 143   popLine -> <empty>
Rule 144   popPoint -> <empty>
Rule 145   popCircle -> <empty>
Rule 146   popArc -> <empty>
Rule 147   popPenup -> <empty>
Rule 148   popPendown -> <empty>
Rule 149   popColor -> <empty>
Rule 150   popSize -> <empty>
Rule 151   popClear -> <empty>
Rule 152   popReturn -> <empty>
Rule 153   pushGotoF -> <empty>
Rule 154   rellenarFalso -> <empty>
Rule 155   rellenarSalida -> <empty>
Rule 156   pushSalto -> <empty>
Rule 157   rellenarWhile -> <empty>
Rule 158   pushFromId -> <empty>
Rule 159   pushVC -> <empty>
Rule 160   pushVF -> <empty>
Rule 161   rellenaFrom -> <empty>
Rule 162   rellenaMain -> <empty>
Rule 163   pushDim -> <empty>
Rule 164   addArreglo -> <empty>
Rule 165   verifyDim -> <empty>
Rule 166   calculateDir -> <empty>
Rule 167   printTables -> <empty>

Terminals, with rules where they appear

AND                  : 70
ARC                  : 104
CHAR                 : 13 24
CIRCLE               : 103
CLEAR                : 109
COLON                : 7
COLOR                : 107
COMMA                : 8 32 49 52 55 57 85 99 100 104 106 108
C_CHAR               : 89
C_FLOAT              : 88
C_INT                : 87
C_STRING             : 55 56 100 107
DIVIDE               : 78
DO                   : 64 65
ELSE                 : 60
EQUALS               : 45 65
FLOAT                : 12 23
FROM                 : 65
GREATER_THAN         : 67
ID                   : 1 7 8 26 31 32 45 46 47 52 53 65 82 83 86
IF                   : 59
INT                  : 11 22
IS_EQUAL             : 72
LBRACKET             : 33 34
LESS_THAN            : 68
LINE                 : 99
LPAREN               : 1 26 46 47 50 51 54 59 64 79 82 83 99 102 103 104 105 106 107 108 109
LSBRACKET            : 14 16 18 20
MAIN                 : 1
MINUS                : 75
MODULE               : 26
MULTIPLY             : 77
NOT_EQUAL            : 69
OR                   : 71
PENDOWN              : 106
PENUP                : 105
PLUS                 : 74
POINT                : 102
PROGRAM              : 1
RBRACKET             : 34 36
READ                 : 51
RETURN               : 50
RPAREN               : 1 26 47 48 50 53 56 58 59 64 79 83 84 99 102 103 104 105 106 107 108 109
RSBRACKET            : 14 16 18 20
SEMICOLON            : 1 9 10 26 45 47 48 50 53 56 58 99 102 103 104 105 106 107 108 109
SIZE                 : 108
THEN                 : 59
TO                   : 65
VAR                  : 6
VOID                 : 25
WHILE                : 64
WRITE                : 54
error                : 

Nonterminals, with rules where they appear

ARREGLO              : 7 8
ARREGLO2             : 14
ARREGLOC2            : 18
ARREGLOCALL          : 45 86
ASIGNACION           : 37
BLOQUE               : 1 27 28 59 60 64 65
BLOQUEA              : 33 35
COND                 : 62
DECISION             : 42
ESCRITURA            : 41
ESCRITURAA           : 54 55 57
ESTATUTO             : 35 36
EXP                  : 14 16 18 20 66 67 68 69 70 71 72 74 75
EXPRESION            : 45 48 49 50 57 58 59 64 65 65 67 68 69 70 71 72 79 84 85 99 99 102 103 104 104 106 106 108 108
FACTOR               : 76 77 78
FARC                 : 93
FCIRCLE              : 92
FCLEAR               : 98
FCOLOR               : 96
FILLCOLOR            : 102 103 104
FLINE                : 90
FPENDOWN             : 95
FPENUP               : 94
FPOINT               : 91
FSIZE                : 97
FU                   : 1 4
FUNC                 : 4
FUNCESP              : 44
FUNCSB               : 26
LECTURA              : 40
LECTURAS             : 51 52
LLAMADA              : 38
LLAMADAMOD           : 81
LLAMADAMODS          : 82 85
LLAMADAS             : 46 49
NOCOND               : 63
PARAMS               : 26
PARAMSL              : 29 32
PROGRAMA             : 0
REPETICION           : 43
RETORNO              : 39
SINO                 : 59
TERMINO              : 73 74 75 77 78
TIPO                 : 7 31 32
TIPOFUNC             : 26
VA                   : 1
VARCTE               : 80
VARS                 : 2 27
VARSA                : 6 9
VARSB                : 7 8
addArreglo           : 16 17
addFunc              : 26
addGlobalVars        : 2
addParam             : 48 49 84 85
addParamsFunc        : 26
addProgram           : 1
addVarLista          : 7 8 31 32
addVarsFunc          : 27 28
addWriteEnd          : 56 58
calculateDir         : 18 20
empty                : 3 5 15 19 21 30 61 101
emptyVars            : 6 29
endFunc              : 27 28
hasColor             : 100
popArc               : 104
popCircle            : 103
popClear             : 109
popColor             : 107
popCondition         : 66
popIgual             : 45
popLine              : 99
popMultDiv           : 76 77 78
popParen             : 14 16 18 20 79 84
popPendown           : 106
popPenup             : 105
popPlusMinus         : 73 74 75
popPoint             : 102
popRead              : 52 53
popReturn            : 50
popSize              : 108
popWrite             : 55 56 57 58
printTables          : 1
pushCondition        : 67 68 69 70 71 72
pushConstChar        : 89
pushConstFloat       : 88
pushConstInt         : 87
pushConstString      : 55 56 100 107
pushDim              : 14 16
pushEqual            : 45
pushEra              : 46 47 82 83
pushFromId           : 65
pushGosub            : 83 84
pushGosubLlamada     : 47 48
pushGotoF            : 59 64
pushMultDiv          : 77 78
pushParen            : 14 16 18 20 79 82 83
pushPilaOp           : 45 52 53 86
pushPlusMinus        : 74 75
pushSalto            : 64
pushVC               : 65
pushVF               : 65
rellenaFrom          : 65
rellenaMain          : 1
rellenarFalso        : 60
rellenarSalida       : 60 61
rellenarWhile        : 64
verifyDim            : 18 20
verifyParams         : 48 84

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables

    ID              shift and go to state 3


state 3

    (1) PROGRAMA -> PROGRAM ID . addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables
    (111) addProgram -> .

    SEMICOLON       reduce using rule 111 (addProgram -> .)

    addProgram                     shift and go to state 4

state 4

    (1) PROGRAMA -> PROGRAM ID addProgram . SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables

    SEMICOLON       shift and go to state 5


state 5

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON . VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables
    (2) VA -> . VARS addGlobalVars
    (3) VA -> . empty
    (6) VARS -> . emptyVars VAR VARSA
    (110) empty -> .
    (112) emptyVars -> .

    MODULE          reduce using rule 110 (empty -> .)
    MAIN            reduce using rule 110 (empty -> .)
    VAR             reduce using rule 112 (emptyVars -> .)

    VA                             shift and go to state 6
    VARS                           shift and go to state 7
    empty                          shift and go to state 8
    emptyVars                      shift and go to state 9

state 6

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA . FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables
    (4) FU -> . FUNC FU
    (5) FU -> . empty
    (26) FUNC -> . MODULE TIPOFUNC ID addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
    (110) empty -> .

    MODULE          shift and go to state 13
    MAIN            reduce using rule 110 (empty -> .)

    FU                             shift and go to state 10
    FUNC                           shift and go to state 11
    empty                          shift and go to state 12

state 7

    (2) VA -> VARS . addGlobalVars
    (118) addGlobalVars -> .

    MODULE          reduce using rule 118 (addGlobalVars -> .)
    MAIN            reduce using rule 118 (addGlobalVars -> .)

    addGlobalVars                  shift and go to state 14

state 8

    (3) VA -> empty .

    MODULE          reduce using rule 3 (VA -> empty .)
    MAIN            reduce using rule 3 (VA -> empty .)


state 9

    (6) VARS -> emptyVars . VAR VARSA

    VAR             shift and go to state 15


state 10

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU . MAIN LPAREN RPAREN rellenaMain BLOQUE printTables

    MAIN            shift and go to state 16


state 11

    (4) FU -> FUNC . FU
    (4) FU -> . FUNC FU
    (5) FU -> . empty
    (26) FUNC -> . MODULE TIPOFUNC ID addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
    (110) empty -> .

    MODULE          shift and go to state 13
    MAIN            reduce using rule 110 (empty -> .)

    FUNC                           shift and go to state 11
    FU                             shift and go to state 17
    empty                          shift and go to state 12

state 12

    (5) FU -> empty .

    MAIN            reduce using rule 5 (FU -> empty .)


state 13

    (26) FUNC -> MODULE . TIPOFUNC ID addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
    (22) TIPOFUNC -> . INT
    (23) TIPOFUNC -> . FLOAT
    (24) TIPOFUNC -> . CHAR
    (25) TIPOFUNC -> . VOID

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    VOID            shift and go to state 22

    TIPOFUNC                       shift and go to state 18

state 14

    (2) VA -> VARS addGlobalVars .

    MODULE          reduce using rule 2 (VA -> VARS addGlobalVars .)
    MAIN            reduce using rule 2 (VA -> VARS addGlobalVars .)


state 15

    (6) VARS -> emptyVars VAR . VARSA
    (7) VARSA -> . TIPO COLON ID addVarLista ARREGLO VARSB
    (11) TIPO -> . INT
    (12) TIPO -> . FLOAT
    (13) TIPO -> . CHAR

    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27

    VARSA                          shift and go to state 23
    TIPO                           shift and go to state 24

state 16

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN . LPAREN RPAREN rellenaMain BLOQUE printTables

    LPAREN          shift and go to state 28


state 17

    (4) FU -> FUNC FU .

    MAIN            reduce using rule 4 (FU -> FUNC FU .)


state 18

    (26) FUNC -> MODULE TIPOFUNC . ID addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB

    ID              shift and go to state 29


state 19

    (22) TIPOFUNC -> INT .

    ID              reduce using rule 22 (TIPOFUNC -> INT .)


state 20

    (23) TIPOFUNC -> FLOAT .

    ID              reduce using rule 23 (TIPOFUNC -> FLOAT .)


state 21

    (24) TIPOFUNC -> CHAR .

    ID              reduce using rule 24 (TIPOFUNC -> CHAR .)


state 22

    (25) TIPOFUNC -> VOID .

    ID              reduce using rule 25 (TIPOFUNC -> VOID .)


state 23

    (6) VARS -> emptyVars VAR VARSA .

    MODULE          reduce using rule 6 (VARS -> emptyVars VAR VARSA .)
    MAIN            reduce using rule 6 (VARS -> emptyVars VAR VARSA .)
    LBRACKET        reduce using rule 6 (VARS -> emptyVars VAR VARSA .)


state 24

    (7) VARSA -> TIPO . COLON ID addVarLista ARREGLO VARSB

    COLON           shift and go to state 30


state 25

    (11) TIPO -> INT .

    COLON           reduce using rule 11 (TIPO -> INT .)
    ID              reduce using rule 11 (TIPO -> INT .)


state 26

    (12) TIPO -> FLOAT .

    COLON           reduce using rule 12 (TIPO -> FLOAT .)
    ID              reduce using rule 12 (TIPO -> FLOAT .)


state 27

    (13) TIPO -> CHAR .

    COLON           reduce using rule 13 (TIPO -> CHAR .)
    ID              reduce using rule 13 (TIPO -> CHAR .)


state 28

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN . RPAREN rellenaMain BLOQUE printTables

    RPAREN          shift and go to state 31


state 29

    (26) FUNC -> MODULE TIPOFUNC ID . addFunc LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
    (114) addFunc -> .

    LPAREN          reduce using rule 114 (addFunc -> .)

    addFunc                        shift and go to state 32

state 30

    (7) VARSA -> TIPO COLON . ID addVarLista ARREGLO VARSB

    ID              shift and go to state 33


state 31

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN . rellenaMain BLOQUE printTables
    (162) rellenaMain -> .

    LBRACKET        reduce using rule 162 (rellenaMain -> .)

    rellenaMain                    shift and go to state 34

state 32

    (26) FUNC -> MODULE TIPOFUNC ID addFunc . LPAREN PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB

    LPAREN          shift and go to state 35


state 33

    (7) VARSA -> TIPO COLON ID . addVarLista ARREGLO VARSB
    (113) addVarLista -> .

    LSBRACKET       reduce using rule 113 (addVarLista -> .)
    COMMA           reduce using rule 113 (addVarLista -> .)
    SEMICOLON       reduce using rule 113 (addVarLista -> .)

    addVarLista                    shift and go to state 36

state 34

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain . BLOQUE printTables
    (33) BLOQUE -> . LBRACKET BLOQUEA
    (34) BLOQUE -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 38

    BLOQUE                         shift and go to state 37

state 35

    (26) FUNC -> MODULE TIPOFUNC ID addFunc LPAREN . PARAMS addParamsFunc RPAREN SEMICOLON FUNCSB
    (29) PARAMS -> . emptyVars PARAMSL
    (30) PARAMS -> . empty
    (112) emptyVars -> .
    (110) empty -> .

    INT             reduce using rule 112 (emptyVars -> .)
    FLOAT           reduce using rule 112 (emptyVars -> .)
    CHAR            reduce using rule 112 (emptyVars -> .)
    RPAREN          reduce using rule 110 (empty -> .)

    PARAMS                         shift and go to state 39
    emptyVars                      shift and go to state 40
    empty                          shift and go to state 41

state 36

    (7) VARSA -> TIPO COLON ID addVarLista . ARREGLO VARSB
    (14) ARREGLO -> . LSBRACKET pushParen EXP RSBRACKET popParen pushDim ARREGLO2
    (15) ARREGLO -> . empty
    (110) empty -> .

    LSBRACKET       shift and go to state 43
    COMMA           reduce using rule 110 (empty -> .)
    SEMICOLON       reduce using rule 110 (empty -> .)

    ARREGLO                        shift and go to state 42
    empty                          shift and go to state 44

state 37

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE . printTables
    (167) printTables -> .

    $end            reduce using rule 167 (printTables -> .)

    printTables                    shift and go to state 45

state 38

    (33) BLOQUE -> LBRACKET . BLOQUEA
    (34) BLOQUE -> LBRACKET . RBRACKET
    (35) BLOQUEA -> . ESTATUTO BLOQUEA
    (36) BLOQUEA -> . ESTATUTO RBRACKET
    (37) ESTATUTO -> . ASIGNACION
    (38) ESTATUTO -> . LLAMADA
    (39) ESTATUTO -> . RETORNO
    (40) ESTATUTO -> . LECTURA
    (41) ESTATUTO -> . ESCRITURA
    (42) ESTATUTO -> . DECISION
    (43) ESTATUTO -> . REPETICION
    (44) ESTATUTO -> . FUNCESP
    (45) ASIGNACION -> . ID pushPilaOp ARREGLOCALL EQUALS pushEqual EXPRESION popIgual SEMICOLON
    (46) LLAMADA -> . ID pushEra LPAREN LLAMADAS
    (47) LLAMADA -> . ID pushEra LPAREN RPAREN SEMICOLON pushGosubLlamada
    (50) RETORNO -> . RETURN LPAREN EXPRESION RPAREN popReturn SEMICOLON
    (51) LECTURA -> . READ LPAREN LECTURAS
    (54) ESCRITURA -> . WRITE LPAREN ESCRITURAA
    (59) DECISION -> . IF LPAREN EXPRESION RPAREN pushGotoF THEN BLOQUE SINO
    (62) REPETICION -> . COND
    (63) REPETICION -> . NOCOND
    (90) FUNCESP -> . FLINE
    (91) FUNCESP -> . FPOINT
    (92) FUNCESP -> . FCIRCLE
    (93) FUNCESP -> . FARC
    (94) FUNCESP -> . FPENUP
    (95) FUNCESP -> . FPENDOWN
    (96) FUNCESP -> . FCOLOR
    (97) FUNCESP -> . FSIZE
    (98) FUNCESP -> . FCLEAR
    (64) COND -> . WHILE pushSalto LPAREN EXPRESION RPAREN pushGotoF DO BLOQUE rellenarWhile
    (65) NOCOND -> . FROM ID pushFromId EQUALS EXPRESION pushVC TO EXPRESION pushVF DO BLOQUE rellenaFrom
    (99) FLINE -> . LINE LPAREN EXPRESION COMMA EXPRESION RPAREN popLine SEMICOLON
    (102) FPOINT -> . POINT LPAREN EXPRESION FILLCOLOR RPAREN popPoint SEMICOLON
    (103) FCIRCLE -> . CIRCLE LPAREN EXPRESION FILLCOLOR RPAREN popCircle SEMICOLON
    (104) FARC -> . ARC LPAREN EXPRESION COMMA EXPRESION FILLCOLOR RPAREN popArc SEMICOLON
    (105) FPENUP -> . PENUP LPAREN RPAREN popPenup SEMICOLON
    (106) FPENDOWN -> . PENDOWN LPAREN EXPRESION COMMA EXPRESION RPAREN popPendown SEMICOLON
    (107) FCOLOR -> . COLOR LPAREN C_STRING pushConstString RPAREN popColor SEMICOLON
    (108) FSIZE -> . SIZE LPAREN EXPRESION COMMA EXPRESION RPAREN popSize SEMICOLON
    (109) FCLEAR -> . CLEAR LPAREN RPAREN popClear SEMICOLON

    RBRACKET        shift and go to state 47
    ID              shift and go to state 57
    RETURN          shift and go to state 58
    READ            shift and go to state 59
    WRITE           shift and go to state 60
    IF              shift and go to state 61
    WHILE           shift and go to state 73
    FROM            shift and go to state 74
    LINE            shift and go to state 75
    POINT           shift and go to state 76
    CIRCLE          shift and go to state 77
    ARC             shift and go to state 78
    PENUP           shift and go to state 79
    PENDOWN         shift and go to state 80
    COLOR           shift and go to state 81
    SIZE            shift and go to state 82
    CLEAR           shift and go to state 83

    BLOQUEA                        shift and go to state 46
    ESTATUTO                       shift and go to state 48
    ASIGNACION                     shift and go to state 49
    LLAMADA                        shift and go to state 50
    RETORNO                        shift and go to state 51
    LECTURA                        shift and go to state 52
    ESCRITURA                      shift and go to state 53
    DECISION                       shift and go to state 54
    REPETICION                     shift and go to state 55
    FUNCESP                        shift and go to state 56
    COND                           shift and go to state 62
    NOCOND                         shift and go to state 63
    FLINE                          shift and go to state 64
    FPOINT                         shift and go to state 65
    FCIRCLE                        shift and go to state 66
    FARC                           shift and go to state 67
    FPENUP                         shift and go to state 68
    FPENDOWN                       shift and go to state 69
    FCOLOR                         shift and go to state 70
    FSIZE                          shift and go to state 71
    FCLEAR                         shift and go to state 72

state 39

    (26) FUNC -> MODULE TIPOFUNC ID addFunc LPAREN PARAMS . addParamsFunc RPAREN SEMICOLON FUNCSB
    (115) addParamsFunc -> .

    RPAREN          reduce using rule 115 (addParamsFunc -> .)

    addParamsFunc                  shift and go to state 84

state 40

    (29) PARAMS -> emptyVars . PARAMSL
    (31) PARAMSL -> . TIPO ID addVarLista
    (32) PARAMSL -> . PARAMSL COMMA TIPO ID addVarLista
    (11) TIPO -> . INT
    (12) TIPO -> . FLOAT
    (13) TIPO -> . CHAR

    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27

    PARAMSL                        shift and go to state 85
    TIPO                           shift and go to state 86

state 41

    (30) PARAMS -> empty .

    RPAREN          reduce using rule 30 (PARAMS -> empty .)


state 42

    (7) VARSA -> TIPO COLON ID addVarLista ARREGLO . VARSB
    (8) VARSB -> . COMMA ID addVarLista ARREGLO VARSB
    (9) VARSB -> . SEMICOLON VARSA
    (10) VARSB -> . SEMICOLON

    COMMA           shift and go to state 88
    SEMICOLON       shift and go to state 89

    VARSB                          shift and go to state 87

state 43

    (14) ARREGLO -> LSBRACKET . pushParen EXP RSBRACKET popParen pushDim ARREGLO2
    (132) pushParen -> .

    LPAREN          reduce using rule 132 (pushParen -> .)
    ID              reduce using rule 132 (pushParen -> .)
    C_INT           reduce using rule 132 (pushParen -> .)
    C_FLOAT         reduce using rule 132 (pushParen -> .)
    C_CHAR          reduce using rule 132 (pushParen -> .)

    pushParen                      shift and go to state 90

state 44

    (15) ARREGLO -> empty .

    COMMA           reduce using rule 15 (ARREGLO -> empty .)
    SEMICOLON       reduce using rule 15 (ARREGLO -> empty .)


state 45

    (1) PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables .

    $end            reduce using rule 1 (PROGRAMA -> PROGRAM ID addProgram SEMICOLON VA FU MAIN LPAREN RPAREN rellenaMain BLOQUE printTables .)


state 46

    (33) BLOQUE -> LBRACKET BLOQUEA .
